samples/_failures_safe/1761348657_799aca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e75241c4.c: In function ‘tokenize’:
./samples/SAFE/__tmp_e75241c4.c:162:13: error: expected expression at end of input
  162 |             char unknown[2] = {
      |             ^~~~
./samples/SAFE/__tmp_e75241c4.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e75241c4.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e75241c4.c:162:13: error: expected declaration or statement at end of input
